[frontend feature] Placeholders for views & main page v1

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,23 +1,13 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+<div class="welcome jumbotron">
+  <h2>Witaj!</h2>
+  
+  <p>System ten służy do obsługi rezerwacji w Nowym Domu Polskim w Jerozolimie. Na górnej belce znaleźć można 3 przyciski pozwalające przejść do widoku określonego aspektu aplikacji. 
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+  <button type="button" class="btn btn-success btn-xs btn-constsize-200">Widok rezerwacji</button> - pozwala na zarządzanie (dodawanie,usuwanie,edycję) rezerwacji i prowadzenie kontroli nad zeszłymi i najbliższymi przyjazdami. 
+  </p><p>
+  <button type="button" class="btn btn-info btn-xs btn-constsize-200">Pokoje</button> - widok ten pozwala na dodawanie/usuwanie/czasowe wyłączenie z użytku zadanych pokoi, pozwala także na monitorowanie zajętości pokoi w wybranym przedziale czasu.
+  </p><p>
+  <button type="button" class="btn btn-warning btn-xs btn-constsize-200">Mieszkańcy</button> - widok ten pozwala dodawać/edytować/usuwać dane kontaktowe do osób składających rezerwacje. Pozwala przeglądać historię rezerwacji, oraz weryfikację najbliższych przyjazdów.
   </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
