--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -14,6 +14,11 @@ body {
   padding: 0;
 }
 
+.welcome {
+  text-align: left;
+}
+
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -49,12 +54,19 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
   border-bottom: 1px solid #e5e5e5;
 
   .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+    font-weight: bold;
+  }
+
+  .btn-constsize-200 {
+    width: 150px;
+  }
+
+  p {
+    font-size: 14px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 }
 
