--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -70,6 +70,17 @@ body {
   }
 }
 
+.reservations {
+  table, td, tr {
+    border: 1px solid black;
+  }
+  thead {
+    td {
+      width: 200px;
+    }
+  }
+}
+
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
