--- a/frontend/app/views/reservations.html
+++ b/frontend/app/views/reservations.html
@@ -1,3 +1,24 @@
-<div class="jumbotron">
+<div class="jumbotron reservations">
   <h2>Rezerwacje!</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <td>Mieszkaniec</td>
+        <td>Data od</td>
+        <td>Data do</td>
+        <td>Liczba osób</td>
+        <td>Data rezerwacji</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="reservation in future_reservations">
+        <td>{{reservation.locator}}</td>
+        <td>{{reservation.since}}</td>
+        <td>{{reservation.till}}</td>
+        <td>{{reservation.head_count}}</td>
+        <td>{{reservation.reservation_time}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
