--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -107,7 +107,7 @@ body {
 
 
 /*                        */
-.reservations {
+.reservations, .locators {
   table {
       box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -165,5 +165,71 @@ body {
   tfoot td {
       width: 100%;
       display: inline-block;
+  }
+}
+
+.locators {
+  a {
+    color: #69C;
+    text-decoration: none;
+  }
+  a:hover {
+    color: #F60;
+  }
+  h1 {
+    font: 1.7em;
+    line-height: 110%;
+    color: #000;
+  }
+  p {
+    margin: 0 0 20px;
+  }
+
+
+  input {
+    outline: none;
+  }
+  input[type=search] {
+    -webkit-appearance: textfield;
+    -webkit-box-sizing: content-box;
+    font-family: inherit;
+    font-size: 100%;
+  }
+  input::-webkit-search-decoration,
+  input::-webkit-search-cancel-button {
+    display: none; 
+  }
+
+
+  input[type=search] {
+    background: #ededed url(http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+    border: solid 1px #ccc;
+    padding: 9px 10px 9px 32px;
+    width: 50%;
+    
+    -webkit-border-radius: 1em;
+    -moz-border-radius: 1em;
+    border-radius: 1em;
+    
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    transition: all .5s;
+  }
+  input[type=search]:focus {
+    width: 70%;
+    background-color: #fff;
+    border-color: #66CC75;
+    
+    -webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
+    -moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
+    box-shadow: 0 0 5px rgba(109,207,246,.5);
+  }
+
+
+  input:-moz-placeholder {
+    color: #999;
+  }
+  input::-webkit-input-placeholder {
+    color: #999;
   }
 }
