CRUD on locators

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -170,11 +170,11 @@ body {
 
 .locators {
   a {
-    color: #69C;
+   // color: #69C;
     text-decoration: none;
   }
   a:hover {
-    color: #F60;
+    //color: #F60;
   }
   h1 {
     font: 1.7em;
