--- a/frontend/app/views/locators/locators.html
+++ b/frontend/app/views/locators/locators.html
@@ -32,8 +32,8 @@
         </td>
         <td>
           <div class = "btn-group">
-          	<a ng-href="#/locators/{{locator.id}}/edit" class="btn btn-success btn-xs" type="button" role="button">Edytuj</a>
-          	<a ng-href="#/locators/{{locator.id}}/delete" class="btn btn-danger btn-xs" type="button" role="button">Usuń</a>
+          	<a ng-click="editLocator({{locator.id}})" class="btn btn-success btn-xs" type="button" role="button">Edytuj</a>
+          	<a ng-click="deleteLocator({{locator.id}})" class="btn btn-danger btn-xs" type="button" role="button">Usuń</a>
 
           </div>
         </td>
