[frontend feature] Generic modal window used for locator deletion confirmation

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -105,6 +105,14 @@ body {
 
 
 
+.room-available-at-time {
+  background-color: green;
+}
+
+.room-unavailable-at-time {
+  background-color: red;
+}
+
 
 /*                        */
 .reservations, .locators {
