--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -17,6 +17,13 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   margin-bottom: 0px;
 }
 
+#reservations_table {
+  
+  td,th {
+    font-size: 1em;
+  }
+
+}
 
 #rooms-wrapper {
   #calendar-box {
