--- a/frontend/app/views/reservations/reservations.create.html
+++ b/frontend/app/views/reservations/reservations.create.html
@@ -1,4 +1,4 @@
-<div class="jumbotron locators">
+<div class="jumbotron rooms">
   <h2>Tworzenie nowej rezerwacji</h2>
 
   <form role="form" ng-submit="saveNew();">
