--- a/frontend/app/views/reservations/reservations.update.html
+++ b/frontend/app/views/reservations/reservations.update.html
@@ -1,4 +1,4 @@
-<div class="jumbotron locators">
+<div class="jumbotron rooms">
   <h2>Edytuj dane rezerwacji</h2>
 
   <form role="form" ng-submit="saveChanges();">
